# framework.web.wearable.wrt-plugins-common

./: .gitignore  CMakeLists.txt  clean.sh  config.dtd  dir-struct.py  wrt-plugins-common.manifest  wrt-plugins-common.map  wrt-popup-ace-runtime.efl  wrt-popup-wrt-runtime.efl
src/: CMakeLists.txt
src/Commons/: Base64.cpp  Base64.h  CMakeLists.txt  DESCRIPTION  Deprecated.h  Dimension.h  Emitters.h  EventListener.h  EventReceiver.h  Exception.h  FunctionDeclaration.h  FunctionDefinition.cpp  FunctionDefinition.h  IEvent.h  IExternEventCanceler.h  JSObject.cpp  JSObject.h  JSObjectDeclaration.cpp  JSObjectDeclaration.h  ListenerEvent.h  ListenerEventEmitter.h  Range.h  Regex.cpp  Regex.h  RegexPatterns.h  RegexUtils.cpp  RegexUtils.h  StaticAssert.h  StringBuilder.cpp  StringBuilder.h  StringUtils.cpp  StringUtils.h  ThreadPool.cpp  ThreadPool.h  TimeUtils.cpp  TimeUtils.h  TypeTraits.h  TypesDeclaration.h  plugin_initializer_def.h
src/Commons/WrtAccess/: WrtAccess.cpp  WrtAccess.h  config.cmake
src/CommonsJavaScript/: CMakeLists.txt  Converter.cpp  Converter.h  DOMExceptionData.cpp  DOMExceptionData.h  JSCallbackManager.cpp  JSCallbackManager.h  JSDOMException.cpp  JSDOMException.h  JSDOMExceptionFactory.cpp  JSDOMExceptionFactory.h  JSLifeManager.cpp  JSLifeManager.h  JSPendingOperation.cpp  JSPendingOperation.h  JSPendingOperationPrivateObject.h  JSUtils.cpp  JSUtils.h  PrivateObject.h  ScopedJSStringRef.cpp  ScopedJSStringRef.h  SecurityExceptions.h  SupportPendingOperation.h  Utils.h  Validator.cpp  Validator.h
src/CommonsJavaScript/Security/: SecurityFunctionDeclaration.cpp  SecurityFunctionDeclaration.h  StaticDeclaration.h
src/dispatch-event/: CMakeLists.txt  dispatch_event_support.cpp  dispatch_event_support.h
src/js-overlay/: CMakeLists.txt  js_function_manager.cpp  js_function_manager.h  js_overlay_functions.cpp  js_overlay_functions.h  js_overlay_types.h
src/js-overlay/deprecated/: js_iframe_support.cpp  js_iframe_support.h  js_overlay_addEventListener.cpp  js_overlay_addEventListener.h  js_overlay_support.cpp  js_overlay_support.h
src/js-overlay/deprecated/JSClass/: JSSoftKeyboardChangeEvent.cpp  JSSoftKeyboardChangeEvent.h  JSStorageEvent.cpp  JSStorageEvent.h  JSTizenServiceEvent.cpp  JSTizenServiceEvent.h
src/modules/: CMakeLists.txt  DESCRIPTION
src/modules/API/: CMakeLists.txt  DESCRIPTION
src/modules/API/Filesystem/: Enums.h  EventCopy.cpp  EventCopy.h  EventFind.cpp  EventFind.h  EventListNodes.cpp  EventListNodes.h  EventMove.cpp  EventMove.h  EventOpen.cpp  EventOpen.h  EventReadText.cpp  EventReadText.h  EventRemove.cpp  EventRemove.h  EventResolve.cpp  EventResolve.h  IManager.cpp  IManager.h  INode.cpp  INode.h  INodeTypes.h  IPath.cpp  IPath.h  IStream.cpp  IStream.h  NodeFilter.cpp  NodeFilter.h  PathUtils.cpp  PathUtils.h  config.cmake
src/modules/API/LocalStorage/: ILocalStorage.h  LocalStorageMgr.cpp  LocalStorageMgr.h  config.cmake
src/modules/API/PluginManager/: IPluginManager.h  PluginManagerFactory.cpp  PluginManagerFactory.h  config.cmake
src/modules/API/SoftKeyboardChangeEvent/: ISoftKeyboardChangeEvent.h  SoftKeyboardChangeEvent.cpp  SoftKeyboardChangeEvent.h  config.cmake
src/modules/API/StorageEvent/: IStorageEvent.h  StorageEvent.cpp  StorageEvent.h  StorageEventMgr.cpp  StorageEventMgr.h  config.cmake
src/modules/API/TizenServiceEvent/: ITizenServiceEvent.h  TizenServiceEvent.cpp  TizenServiceEvent.h  config.cmake
src/modules/API/Widget/: IWidget.h  WidgetFactory.cpp  WidgetFactory.h  config.cmake
src/modules/API/WidgetDB/: IWidgetDB.h  IWidgetFeature.h  WidgetDBMgr.cpp  WidgetDBMgr.h  config.cmake
src/modules/tizen/: CMakeLists.txt  DESCRIPTION  config.cmake
src/modules/tizen/Filesystem/: Manager.cpp  Manager.h  Node.cpp  Node.h  NodeFilterMatcher.cpp  NodeFilterMatcher.h  Path.cpp  Path.h  Stream.cpp  Stream.h  Utils.cpp  Utils.h  config.cmake
src/modules/tizen/PluginManager/: PluginManager.cpp  PluginManager.h  config.cmake
src/modules/tizen/Widget/: Property.h  Widget.cpp  Widget.h  config.cmake
src/modules/tizen/WidgetDB/: WidgetDB.cpp  WidgetDB.h  WidgetFeature.cpp  WidgetFeature.h  config.cmake
src/modules/tizen/WidgetInterface/: CMakeLists.txt  WidgetInterface.cpp  WidgetInterface.h  config.cmake
src/plugin-loading/: CMakeLists.txt  explorer.cpp  explorer.h  javascript_interface.cpp  javascript_interface.h  js_page_session.cpp  js_page_session.h  js_types.h  plugin.cpp  plugin.h  plugin_container_support.cpp  plugin_container_support.h  plugin_iframe_support.cpp  plugin_iframe_support.h  plugin_logic.cpp  plugin_logic.h  plugin_model.cpp  plugin_model.h  plugin_property_support.cpp  plugin_property_support.h
src/plugins-api-support/: CMakeLists.txt  CallbackSupport.h  ExportedApi.h  IObject.h  IObject_cast.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  Plugin.cpp  Plugin.h  PluginRegistration.cpp  PluginRegistration.h  PluginRegistrationImpl.h  PluginRegistry.cpp  PluginRegistry.h  PluginSignals.h  SignalSignature.h  SignalsSupport.h  js_types.h  traits.h  tuple.h
src/plugins-api-support/detail/: traits.h
src/plugins-installer/: CMakeLists.txt  DESCRIPTION  plugin_installer.cpp  plugin_installer.h  plugin_installer_errors.h  plugin_installer_types.h  plugin_metafile_reader.cpp  plugin_metafile_reader.h  plugin_objects.cpp  plugin_objects.h  plugin_utils.cpp  plugin_utils.h  wrt_plugins_installer.cpp
src/plugins-ipc-message/: CMakeLists.txt  ipc_message_support.cpp  ipc_message_support.h
src/standards/: CMakeLists.txt
src/standards/W3C/: CMakeLists.txt  DESCRIPTION
src/standards/W3C/Widget/: CMakeLists.txt  JSPreferences.cpp  JSPreferences.h  JSWidget.cpp  JSWidget.h  plugin_config.cpp  plugin_config.h  plugin_initializer.cpp
src/wrt-popup/: CMakeLists.txt
src/wrt-popup/ace/: CMakeLists.txt
src/wrt-popup/ace/popup-bin/: CMakeLists.txt  Popup.cpp  Popup.h
src/wrt-popup/wrt/: CMakeLists.txt  PopupEnum.h  PopupSerializer.cpp  PopupSerializer.h
tests/dao/: CMakeLists.txt  README  TestInit.cpp  WidgetDBTest.cpp  widgetdb_tests_prepare_db.sh
(+41 files in other folders)
